try to fix tablet responsive, remove text align

--- a/public/html/apps/01_3_digital-timer/style.css
+++ b/public/html/apps/01_3_digital-timer/style.css
@@ -42,10 +42,7 @@
 .digits-container {
     display: flex;
     flex-direction: column;
-    text-align: center;
     font-family: 'Digital-7', sans-serif;
-    height: 5rem;
-   
 }
 
 #saveData {
